package com.nanyin.pattern.memento;
/**
 * 游戏状态
 * @Author nanyin
 * @Date 17:29 2019-06-26
 **/
public enum GameState {
    DIE,SUCCESS
}
